enhance UI wtih bootstrap buttons

--- a/Account/Manage.cshtml
+++ b/Account/Manage.cshtml
@@ -157,7 +157,7 @@
                                 @Html.ValidationMessage("confirmPassword")
                             </div> 
                         @if (hasLocalAccount) { 
-                            <input type="submit" name="action" value="Change Password">  
+                            <input type="submit" name="action" value="Change Password" class="btn btn-info">  
                             <p style="text-align: center; padding-top: 20px;">
                                 Click <a href="~/Account/ForgotPassword" title="Forgot password page"><em>here</em></a> if you've forgotten your password.
                             </p>
