--- a/Default.cshtml
+++ b/Default.cshtml
@@ -11,7 +11,7 @@
                         <i class="fa fa-users" style="font-size: 100px"></i>
                         <br><br>
                         @if (!WebSecurity.IsAuthenticated) {
-                            <p style="font-size: 20pt;" class="btn btn-success">
+                            <p style="font-size: 20pt;" class="btn btn-info">
                                 <a style="color: black;" href="~/Account/Register">Sign up now!</a> 
                             </p>
                         }
