--- a/Default.cshtml
+++ b/Default.cshtml
@@ -11,15 +11,15 @@
                         <i class="fa fa-users" style="font-size: 100px"></i>
                         <br><br>
                         @if (!WebSecurity.IsAuthenticated) {
-                            <p style="font-size: 20pt;" class="btn btn-info">
-                                <a style="color: black;" href="~/Account/Register">Sign up now!</a> 
+                            <p style="font-size: 30pt;">
+                                <a href="~/Account/Register" style="text-decoration: none;color: black;">Sign up now!</a> 
                             </p>
                         }
                          
                         <hr>
                         <br>
-                       <p>Members are requested to post according to the following guidlines:</p>   
-                        <ul>
+                       <p style="font-size:14pt;">Members are requested to post according to the following guidlines:</p>   
+                        <ul style="font-size:9pt;">
                             <li>
                                 <h4>Think Before Posting</h4>
                             </li>
